Fix layout bug for commented boxes

--- a/assets/_scss/index.scss
+++ b/assets/_scss/index.scss
@@ -73,6 +73,7 @@
 }
 
 .preview-card-container {
+    height: 100%;
     // Make it smaller on mobile.
     width: 90%;
     margin-inline: auto;
